Fix Java 11-ism for List creation in tests